small infrastructure changes
Tests can be run via `make test` which will also run flake8 before the
tests.

--- a/tox.ini
+++ b/tox.ini
@@ -26,5 +26,17 @@ commands =
     flake8
 
 [flake8]
-exclude = docs,.cache,.tox,*.egg-info,.ropeproject
+exclude =
+    .git,
+    .idea,
+    docs,
+    tests,
+    __pycache__,
+    .cache,
+    .tox,
+    *.egg-info,
+    .ropeproject,
+    runtests.py
+    setup.py,
+
 max-line-length = 80
