--- a/tox.ini
+++ b/tox.ini
@@ -9,21 +9,44 @@ envlist =
     py{27,34,35}-django18
     py{27,34,35}-django110
     py{27,34,35,36}-django111
+    py{34,35,36}-django20
+    docs
+    readme
 
 [testenv]
 deps =
     django18: Django>=1.8,<1.9
     django110: Django>=1.10,<1.11
     django111: Django>=1.11,<2.0
+    django20: Django>=2.0,<2.1
     py27: mock
 commands =
     python runtests.py
 
+[testenv:docs]
+changedir = docs
+deps =
+    sphinx
+    sphinx-autobuild
+    sphinx_rtd_theme
+whitelist_externals = make
+commands = make html
+
 [testenv:flake8]
-basepython = python
 deps = flake8
-commands =
-    flake8
+commands = flake8
+
+[testenv:readme]
+deps = readme_renderer
+commands = python setup.py check --restructuredtext --strict
+
+[travis:env]
+DJANGO =
+    1.8: django18
+    1.9: django19
+    1.10: django110
+    1.11: django111
+    2.0: django20
 
 [flake8]
 exclude =
@@ -38,5 +61,4 @@ exclude =
     .ropeproject,
     runtests.py
     setup.py,
-
 max-line-length = 80
