Move coverage config to Python 2.7 friendly location
Apparently python 2.7 setup.cfg doesn't like namespaces

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,9 +1,9 @@
-[coverage:run]
+[run]
 	branch = True
 	include =
 		*/service_objects/*
 
-[coverage:report]
+[report]
 	show_missing = True
 	precision = 2
 	sort = Name
