--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ envlist =
     py{27,35,36,37}-django111
     py{35,36,37}-django20
     py{35,36,37}-django21
+    py{35,36,37}-django22
     docs
 
 [testenv]
@@ -16,6 +17,7 @@ deps =
     django111: Django>=1.11,<2.0
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
+    django22: Django>=2.2,<2.3
     py27: mock
 commands =
     python runtests.py
@@ -38,6 +40,7 @@ DJANGO =
     1.11: django111
     2.0: django20
     2.1: django21
+    2.2: django22
 
 [flake8]
 exclude =
