--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,13 @@ env:
   - DJANGO=1.11
   - DJANGO=2.0
   - DJANGO=2.1
+  - DJANGO=2.2
 matrix:
   exclude:
     # Python/Django combinations that aren't officially supported
     - { python: 2.7, env: DJANGO=2.0 }
     - { python: 2.7, env: DJANGO=2.1 }
+    - { python: 2.7, env: DJANGO=2.2 }
   include:
     - { python: 3.7, env: TOXENV=flake8 }
     - { python: 3.7, env: TOXENV=docs }
