--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - 3.5
   - 3.6
   - 3.7
+  - 3.8
 dist: xenial
 sudo: true
 env:
@@ -11,6 +12,7 @@ env:
   - DJANGO=2.0
   - DJANGO=2.1
   - DJANGO=2.2
+  - DJANGO=3.0
 matrix:
   exclude:
     # Python/Django combinations that aren't officially supported
@@ -18,8 +20,8 @@ matrix:
     - { python: 2.7, env: DJANGO=2.1 }
     - { python: 2.7, env: DJANGO=2.2 }
   include:
-    - { python: 3.7, env: TOXENV=flake8 }
-    - { python: 3.7, env: TOXENV=docs }
+    - { python: 3.8, env: TOXENV=flake8 }
+    - { python: 3.8, env: TOXENV=docs }
 
 install:
   - pip install tox-travis
