--- a/tox.ini
+++ b/tox.ini
@@ -6,10 +6,11 @@
 [tox]
 envlist =
     flake8
-    py{27,35,36,37}-django111
-    py{35,36,37}-django20
-    py{35,36,37}-django21
-    py{35,36,37}-django22
+    py{27,35,36,37,38}-django111
+    py{35,36,37,38}-django20
+    py{35,36,37,38}-django21
+    py{35,36,37,38}-django22
+    py{36,37,38}-django30
 	celery
     docs
 
@@ -20,6 +21,7 @@ deps =
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
     django22: Django>=2.2,<2.3
+    django30: Django>=3.0,<3.1
     py27: mock
 commands =
     python runtests.py
@@ -43,6 +45,7 @@ DJANGO =
     2.0: django20
     2.1: django21
     2.1: django22
+    3.0: django30
 
 [flake8]
 exclude =
