Add Github Actions as CI

--- a/tox.ini
+++ b/tox.ini
@@ -6,11 +6,9 @@
 [tox]
 envlist =
     flake8
-    py{27,35,36,37,38}-django111
-    py{35,36,37,38}-django20
-    py{35,36,37,38}-django21
-    py{35,36,37,38}-django22
-    py{36,37,38}-django30
+    py{36,37,38,39}-django22
+    py{36,37,38,39}-django31
+    py{36,37,38,39}-django32
 	celery
     docs
 skip_missing_interpreters = true
@@ -18,12 +16,9 @@ skip_missing_interpreters = true
 [testenv]
 deps =
     celery
-    django111: Django>=1.11,<2.0
-    django20: Django>=2.0,<2.1
-    django21: Django>=2.1,<2.2
     django22: Django>=2.2,<2.3
-    django30: Django>=3.0,<3.1
-    py27: mock
+    django31: Django>=3.1,<3.2
+    django32: Django>=3.2,<3.3
 commands =
     python runtests.py
 
@@ -40,13 +35,11 @@ commands = make html
 deps = flake8
 commands = flake8
 
-[travis:env]
+[gh-actions:env]
 DJANGO =
-    1.11: django111
-    2.0: django20
-    2.1: django21
-    2.1: django22
-    3.0: django30
+    2.2: django22
+    3.1: django31
+    3.2: django32
 
 [flake8]
 exclude =
