--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
-        django-version: [2.2, 3.1, 3.2]
+        python-version: [3.7, 3.8, 3.9, 3.10]
+        django-version: [2.2, 3.1, 3.2, 4.0]
 
     steps:
       - uses: actions/checkout@v2
