--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,17 +2,29 @@ name: Test
 
 on:
   push:
-    branches: [master]
+    branches:
+      - master
   pull_request:
-    branches: [master]
+    branches:
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
-        django-version: [2.2, 3.1, 3.2]
+        python-version: [3.7, 3.8, 3.9, "3.10"]
+        django-version: [2.2, 3.1, 3.2, 4.0]
+        exclude:
+          # Django 4.0 doesn't support Python 3.7
+          - python-version: 3.7
+            django-version: 4.0
+          # Django 2.2 doesn't support Python 3.10
+          - python-version: 3.10
+            django-version: 2.2
+          # Django 3.1 doesn't support Python 3.10
+          - python-version: 3.10
+            django-version: 3.1
 
     steps:
       - uses: actions/checkout@v2
