--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,10 @@
 [tox]
 envlist =
     flake8
-    py{36,37,38,39}-django22
-    py{36,37,38,39}-django31
-    py{36,37,38,39}-django32
+    py{37,38,39}-django22
+    py{37,38,39}-django31
+    py{37,38,39,40}-django32
+    py{38,39,40}-django40
 	celery
     docs
 skip_missing_interpreters = true
@@ -19,6 +20,7 @@ deps =
     django22: Django>=2.2,<2.3
     django31: Django>=3.1,<3.2
     django32: Django>=3.2,<3.3
+    django40: Django>=4.0,<4.1
 commands =
     python runtests.py
 
@@ -40,6 +42,7 @@ DJANGO =
     2.2: django22
     3.1: django31
     3.2: django32
+    4.0: django40
 
 [flake8]
 exclude =
